Colab을 통해 생성됨

--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOQrZrTcl4J/mXtMtupqOoS",
+      "authorship_tag": "ABX9TyOqvSarA0k/0yr/vHCbEI2d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "  if t.size == y.size:\n",
         "    t = t.argmax(axis=1)\n",
         "  batch_size = y.shape[0]\n",
-        "  return -np.sum(np.log(y[np.arange(batch_size),t])) / batch_size\n",
+        "  return -np.sum(np.log(np.clip(y[np.arange(batch_size),t],1e-7, 1))) / batch_size ##clip like Clamp 1e-7 1\n",
         "\n",
         "def _numerical_gradient_no_batch(f,x):\n",
         "  h = 1e-4\n",
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "R18EbCYdEMRB"
       },
-      "execution_count": 27,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "x1azUU3XEn5M"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,20 +205,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WOVasTZW2D6T",
-        "outputId": "4e5848dd-936c-4cec-939d-7a5633e3ad1c"
+        "outputId": "359fc201-3df5-4eb4-9325-76b7232e59a6"
       },
-      "execution_count": 28,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'W1': array([[-0.00468899, -0.00324007, -0.01810562,  0.00390144],\n",
-            "       [ 0.00013358, -0.01478814, -0.00542158,  0.006809  ],\n",
-            "       [ 0.00221429, -0.00329756,  0.00347007,  0.00945333]]), 'b1': array([0., 0., 0., 0.]), 'W2': array([[-0.00842348,  0.00231035, -0.01076629],\n",
-            "       [ 0.01190669,  0.00133869,  0.00032698],\n",
-            "       [ 0.0092381 ,  0.00926889,  0.02412449],\n",
-            "       [ 0.0042241 , -0.00665795, -0.02256205]]), 'b2': array([0., 0., 0.])}\n",
+            "{'W1': array([[ 0.00993965, -0.00504958, -0.00740283, -0.01263313],\n",
+            "       [-0.00867938, -0.00372348, -0.00411149, -0.01203702],\n",
+            "       [ 0.00073903, -0.00093886,  0.0021437 ,  0.00398523]]), 'b1': array([0., 0., 0., 0.]), 'W2': array([[ 0.00420341,  0.0042247 , -0.00305115],\n",
+            "       [-0.00223773,  0.01169053, -0.00075685],\n",
+            "       [ 0.01915135, -0.00606868,  0.00558935],\n",
+            "       [ 0.00090047,  0.00734531, -0.00193883]]), 'b2': array([0., 0., 0.])}\n",
             "\n",
             " W1 shape :  (784, 50)\n",
             "\n",
@@ -301,20 +301,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5f2bf4c-07bc-45d7-f0c7-2557845c9669"
+        "outputId": "dee9ee47-c453-40ce-a51d-d5589dfa684f"
       },
-      "execution_count": 29,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.10160966, 0.10009587, 0.10390315, 0.09912909, 0.09637833,\n",
-              "       0.09640918, 0.10105591, 0.09755347, 0.10054133, 0.10332402])"
+              "array([0.10163814, 0.10097448, 0.10175701, 0.10772984, 0.09571552,\n",
+              "       0.10430655, 0.10400643, 0.09530636, 0.09923064, 0.08933503])"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 33
         }
       ]
     },
@@ -342,15 +342,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "7zctSLkBFz3E"
-      },
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "####Nuerial Network Mnist data Learn"
@@ -366,16 +357,16 @@
         "from keras.datasets import mnist\n",
         "(x_train, t_train), (x_test, t_test) =mnist.load_data()\n",
         "\n",
-        "##  Mnist data Normalize here!  ##\n",
+        "##  Mnist data Flatten & Normalize here!  ##\n",
         "x_train = x_train.reshape(x_train.shape[0],-1).astype(np.float32) / 255.0\n",
         "x_test = x_test.reshape(x_test.shape[0],-1).astype(np.float32) / 255.0\n",
         "##################################\n",
         "\n",
         "train_loss_list=[]\n",
         "\n",
-        "iters_num = 1000\n",
+        "iters_num = 10000\n",
         "train_size = x_train.shape[0]\n",
-        "batch_size = 10\n",
+        "batch_size = 100\n",
         "learning_rate = 0.1\n",
         "\n",
         "network = TwoLayerNet(input_size=784, hidden_size= 50, output_size = 10)\n",
@@ -397,7 +388,7 @@
       "metadata": {
         "id": "hzghYjvcHCGS"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +431,7 @@
       "metadata": {
         "id": "hHXX5k_xOX16"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     }
   ]
