Colab을 통해 생성됨

--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOqvSarA0k/0yr/vHCbEI2d",
+      "authorship_tag": "ABX9TyMrsME4wwqMpbl2b99+07Hb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,8 @@
         "  if t.size == y.size:\n",
         "    t = t.argmax(axis=1)\n",
         "  batch_size = y.shape[0]\n",
-        "  return -np.sum(np.log(np.clip(y[np.arange(batch_size),t],1e-7, 1))) / batch_size ##clip like Clamp 1e-7 1\n",
+        "  return -np.sum(np.log(y[np.arange(batch_size),t])) / batch_size\n",
+        "  # return -np.um(np.log(np.clip(y[np.arange(batch_size),t],1e-7, 1))) / batch_size ##clip like Clamp 1e-7 1\n",
         "\n",
         "def _numerical_gradient_no_batch(f,x):\n",
         "  h = 1e-4\n",
@@ -142,16 +143,7 @@
       "metadata": {
         "id": "R18EbCYdEMRB"
       },
-      "execution_count": 37,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "x1azUU3XEn5M"
-      },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -205,20 +197,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WOVasTZW2D6T",
-        "outputId": "359fc201-3df5-4eb4-9325-76b7232e59a6"
+        "outputId": "6f81102b-7cac-497b-da49-ef266b1e49dc"
       },
-      "execution_count": 32,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'W1': array([[ 0.00993965, -0.00504958, -0.00740283, -0.01263313],\n",
-            "       [-0.00867938, -0.00372348, -0.00411149, -0.01203702],\n",
-            "       [ 0.00073903, -0.00093886,  0.0021437 ,  0.00398523]]), 'b1': array([0., 0., 0., 0.]), 'W2': array([[ 0.00420341,  0.0042247 , -0.00305115],\n",
-            "       [-0.00223773,  0.01169053, -0.00075685],\n",
-            "       [ 0.01915135, -0.00606868,  0.00558935],\n",
-            "       [ 0.00090047,  0.00734531, -0.00193883]]), 'b2': array([0., 0., 0.])}\n",
+            "{'W1': array([[ 0.00451378,  0.02417606, -0.00030801,  0.0058302 ],\n",
+            "       [-0.02190201,  0.0007182 , -0.01515633, -0.01149134],\n",
+            "       [ 0.00492378,  0.00608712,  0.00373162, -0.02077551]]), 'b1': array([0., 0., 0., 0.]), 'W2': array([[ 0.00342198, -0.0081669 ,  0.00787134],\n",
+            "       [ 0.0105976 , -0.00554223, -0.00856403],\n",
+            "       [-0.0114066 , -0.00759321,  0.00867027],\n",
+            "       [-0.00392064, -0.00493472,  0.00605558]]), 'b2': array([0., 0., 0.])}\n",
             "\n",
             " W1 shape :  (784, 50)\n",
             "\n",
@@ -301,20 +293,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dee9ee47-c453-40ce-a51d-d5589dfa684f"
+        "outputId": "9a899f8c-7b67-41d8-a13f-d17c3fed44f7"
       },
-      "execution_count": 33,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.10163814, 0.10097448, 0.10175701, 0.10772984, 0.09571552,\n",
-              "       0.10430655, 0.10400643, 0.09530636, 0.09923064, 0.08933503])"
+              "array([0.09908593, 0.10128935, 0.10565027, 0.09799587, 0.09769391,\n",
+              "       0.10004098, 0.09398623, 0.10389871, 0.09894584, 0.10141292])"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 42
         }
       ]
     },
