--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNgLPuaYrloW/PJJWLUd/Eu",
+      "authorship_tag": "ABX9TyPKtA/wvYo+g+i6AU5Vo63L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "R18EbCYdEMRB"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
         "id": "WOVasTZW2D6T",
         "outputId": "de3f0dce-fd79-4ba6-82a5-9803d8105f1d"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
         },
         "outputId": "3a4e006d-4a21-4212-e389-b257c9559211"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
           "height": 447
         }
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +475,7 @@
       "metadata": {
         "id": "hzghYjvcHCGS"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +511,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,6 +595,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Stochastic GD"
+      ],
+      "metadata": {
+        "id": "vaTd_ENV7s19"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -659,7 +668,7 @@
         "id": "dFh8JWxtG0gv",
         "outputId": "c9accb48-887f-4561-c831-7f9c53ca0c0c"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,12 +719,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### All Data GD, Learning WithOut Slicing(No Stochastic)"
+      ],
+      "metadata": {
+        "id": "lEINvWRF75qA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "E_CmrbZE6SOV"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": []
     }
   ]
