Colab을 통해 생성됨

--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOuBcZIBOCDwzq3aCH4yz2k",
+      "authorship_tag": "ABX9TyMGXRy4PoL1XK7ntoCSY/e1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -742,7 +742,7 @@
         "\n",
         "++ gradient를 활용했음.\n",
         "역전파를 활용해서 해야지 되겠다\n",
-        "numerical_gradient는 너무 오래걸림 34,760개에다가 몇개 더 해야해서 계싼 못한다"
+        "numerical_gradient는 너무 오래걸림 34,760개에다가 몇개 더 해야해서 계산 못한다"
       ],
       "metadata": {
         "id": "Ws67RXzfAigW"
