Colab을 통해 생성됨

--- a/Chap04_05_AvatarDL.ipynb
+++ b/Chap04_05_AvatarDL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMGXRy4PoL1XK7ntoCSY/e1",
+      "authorship_tag": "ABX9TyO9KU3+awOD6LqtYVaK7N4+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -734,6 +734,30 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- DL의 학습은 Backpropagation // Numerical Gradient를 하기떄문에 느리지만,\n",
+        "\n",
+        "- DL의 측정은 Predict -> argmax -> Compare로 측정하기 떄문에 매우 빠르게 측정\n",
+        "\n",
+        "\n",
+        "| 항목         | 학습 (Training)                               | 측정 (Evaluation)                       |\n",
+        "| ---------- | ------------------------------------------- | ------------------------------------- |\n",
+        "| 목적         | 모델을 업데이트하기 위한 가중치 학습                        | 모델이 얼마나 잘 맞추는지 성능 평가                  |\n",
+        "| 주로 사용하는 함수 | `loss()`, `gradient()`, `backpropagation()` | `predict()`, `argmax()`, `accuracy()` |\n",
+        "| 연산 방식      | 수치미분 / 역전파 (Backpropagation)                | 순전파만 (Forward only)                   |\n",
+        "| 연산량        | 매우 높음 (특히 `numerical_gradient`)             | 매우 낮음 (단순 계산)                         |\n",
+        "| 속도         | 느림                                          | 빠름                                    |\n",
+        "| 데이터 사용 방식  | 미니배치 (Mini-batch, 표본 추출)                    | 전체 데이터 사용 (Train 전체 / Test 전체)        |\n",
+        "| 샘플링 여부     | ✅ Yes (Stochastic Gradient Descent)         | ❌ No (모든 샘플로 정확히 측정)                  |\n",
+        "| 측정 빈도      | 보통 여러 번 (`epoch`마다 한 번씩)                    | 주기적으로 측정 (e.g., 1 epoch 단위)           |\n",
+        "| 출력 결과 예시   | 손실 값 (`loss`)                               | 정확도 (`accuracy`)                      |\n"
+      ],
+      "metadata": {
+        "id": "lG0obMie6PVE"
+      }
     },
     {
       "cell_type": "markdown",
