Colab을 통해 생성됨

--- a/Chap05_View.ipynb
+++ b/Chap05_View.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMGzqFCjpeDm3A+MBc1PLq",
+      "authorship_tag": "ABX9TyOEZXI8rE8Da+X0fVIP6TQp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "MulLayer"
+      ],
+      "metadata": {
+        "id": "30tSKv7jUdl5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class MulLayer :\n",
@@ -71,7 +80,7 @@
       "metadata": {
         "id": "Fhtc-b4vOL_-"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -103,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVEG2Il6ONb9",
-        "outputId": "46a57b45-21c8-4f09-b412-60db37158ed9"
+        "outputId": "472591fc-5e69-4df9-df6a-ffe048c29024"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,13 +136,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DHEhs3ZlM3E7",
-        "outputId": "53979431-773b-424f-a4f1-1a7f64a9a133"
+        "outputId": "b8cbc08d-4088-44ac-87e6-d3bde0aa0272"
       },
       "outputs": [
         {
@@ -192,10 +201,118 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "AddLayer"
+      ],
+      "metadata": {
+        "id": "3Xiz7uV4Ub3a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class AddLayer:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def forward(self, x, y):\n",
+        "    out = x + y\n",
+        "    return out\n",
+        "  def backward(self,dout):\n",
+        "    dx = dout *1\n",
+        "    dy = dout *1\n",
+        "    return dx, dy"
+      ],
+      "metadata": {
+        "id": "2AEkMMUKUgmy"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| 코드              | 의미                        | 실제 목적                                |\n",
+        "| --------------- | ------------------------- | -------------------------- |\n",
+        "| `self.x = None` | `self.x`라는 **인스턴스 변수 선언** | 나중에 사용할 값을 미리 저장할 \"칸\"을 만들어 놓는 것      |\n",
+        "| `pass`          | 아무 작업 안 함                 | 단순히 `__init__()`을 비워둠 – 아무것도 초기화 안 함 |\n",
+        "\n",
+        "\n",
+        "| Layer      | 기억 필요한 값 | `__init__()` 내용       | 이유               |\n",
+        "| ---------- | -------- | --------------------- | ---------------- |\n",
+        "| `MulLayer` | `x`, `y` | `self.x = None`, etc. | 역전파 때 x, y 필요    |\n",
+        "| `AddLayer` | 없음       | `pass`                | 미분이 상수라 기억 필요 없음 |\n",
+        "\n",
+        "\n",
+        "=> add Layer에서는 어차피 서로의 변수 필요 없어서 초기화 하지 않음"
+      ],
+      "metadata": {
+        "id": "5CzXseJDVDkm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Apple, Orange!"
+      ],
+      "metadata": {
+        "id": "N8nWmPSfUB-_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "apple = 100\n",
+        "apple_num = 2\n",
+        "orange = 150\n",
+        "orange_num = 3\n",
+        "tax = 1.1\n",
+        "\n",
+        "mul_apple_layer = MulLayer()\n",
+        "mul_orange_layer = MulLayer()\n",
+        "add_apple_orange_layer = AddLayer()\n",
+        "mul_tax_layer = MulLayer()\n",
+        "\n",
+        "#Forward\n",
+        "apple_price = mul_apple_layer.forward(apple, apple_num)\n",
+        "orange_price = mul_orange_layer.forward(orange, orange_num)\n",
+        "all_price = add_apple_orange_layer.forward(apple_price, orange_price)\n",
+        "price = mul_tax_layer.forward(all_price, tax)\n",
+        "\n",
+        "#Backward\n",
+        "dprice=1\n",
+        "dall_price, dtax = mul_tax_layer.backward(dprice)\n",
+        "dapple_price, dorange_price = add_apple_orange_layer.backward(dall_price)\n",
+        "dorange, dorange_num = mul_orange_layer.backward(dorange_price)\n",
+        "dapple, dapple_num = mul_apple_layer.backward(dapple_price)\n",
+        "\n",
+        "print(price)\n",
+        "print(dapple_num, dapple, dorange, dorange_num, dtax)"
+      ],
+      "metadata": {
+        "id": "w0elDnUARQFq",
+        "outputId": "93e15766-db78-424e-ef9b-7a6806d0b029",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "715.0000000000001\n",
+            "110.00000000000001 2.2 3.3000000000000003 165.0 650\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w0elDnUARQFq"
+        "id": "H8ftCPdiUxYU"
       },
       "execution_count": null,
       "outputs": []
