Colab을 통해 생성됨

--- a/Chap05_View.ipynb
+++ b/Chap05_View.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEZXI8rE8Da+X0fVIP6TQp",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNnMFo/dphacS7mzFU634M4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -80,7 +82,7 @@
       "metadata": {
         "id": "Fhtc-b4vOL_-"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -112,9 +114,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVEG2Il6ONb9",
-        "outputId": "472591fc-5e69-4df9-df6a-ffe048c29024"
+        "outputId": "f01447fa-6123-45e7-a710-9720d4456991"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,13 +138,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DHEhs3ZlM3E7",
-        "outputId": "b8cbc08d-4088-44ac-87e6-d3bde0aa0272"
+        "outputId": "de2f02f8-e0e2-4f03-ff1e-a871ac170fa5"
       },
       "outputs": [
         {
@@ -226,7 +228,7 @@
       "metadata": {
         "id": "2AEkMMUKUgmy"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -291,12 +293,12 @@
       ],
       "metadata": {
         "id": "w0elDnUARQFq",
-        "outputId": "93e15766-db78-424e-ef9b-7a6806d0b029",
+        "outputId": "4f44dd7f-4cc1-486b-deb6-22dcd66caffb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,11 +312,108 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Relu:\n",
+        "  def __init__(self):\n",
+        "    self.mask = None #Backward에서 쓸 위치로 기록\n",
+        "  def forward(self,x):\n",
+        "    self.mask = (x<=0) # 0이하인 Argument, True\n",
+        "    out = x.copy()\n",
+        "    out[self.mask] = 0 # True인것들 0으로 Exchange\n",
+        "\n",
+        "    return out\n",
+        "\n",
+        "  def backward(self, dout):\n",
+        "    dout[self.mask] = 0\n",
+        "    dx = dout\n",
+        "\n",
+        "    return dx"
+      ],
       "metadata": {
         "id": "H8ftCPdiUxYU"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "x = np.random.choice(300,4).reshape(2,-1)\n",
+        "x1 = np.random.choice(300,4).reshape(2,-1)\n",
+        "A=x-x1\n",
+        "\n",
+        "print(A)\n",
+        "ru=Relu()\n",
+        "\n",
+        "print(ru.forward(A))\n",
+        "print(ru.backward(A))"
+      ],
+      "metadata": {
+        "id": "S2glSuGBwc7X",
+        "outputId": "260cc312-9f3b-43a5-9b42-27719a874a6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-72 151]\n",
+            " [143  25]]\n",
+            "[[  0 151]\n",
+            " [143  25]]\n",
+            "[[  0 151]\n",
+            " [143  25]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Forward에서 True, False로 뽑아낸 이후에, 0이하인 Argument들만 0으로 바꿔치기한거네\n",
+        "그이후 Backward는 그대로 self.mask를 활용해서 0으로 만들었는거 그대로 바꿔줌"
+      ],
+      "metadata": {
+        "id": "7HHxpMoRxTqN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| 구분                                     | 내용                                                                                                                                                       |\n",
+        "| -------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------- |\n",
+        "| 🎢 **순전파 기반 학습 (numerical\\_gradient)** | 매번 파라미터를 바꿔가며 **한 파라미터에 대한 영향만 수치적으로 계산** → 모든 계산을 통째로 컴퓨터에 시켜서 **단순 brute force 방식** <br> → 후디니에서 **전체 시뮬 다시 돌리는 것**에 가까움                               |\n",
+        "| 🛠 **역전파 기반 학습 (backpropagation)**     | 미리 만들어둔 **수식 (예: sigmoid의 y(1−y))**으로 **빠르게 gradient 계산** → 각 노드의 결과를 **캐시**해서 재사용하면서 효율적으로 작업 <br> → 후디니에서 **cache 걸고 옴니버스식 작업**하는 구조처럼 효율적 |\n"
+      ],
+      "metadata": {
+        "id": "BiAdZi7t1GZo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class sigmoid:\n",
+        "  def __init__(self):\n",
+        "    self.out = None\n",
+        "  def forward(self, x):\n",
+        "    out = 1/ (1 + np.exp(-x))\n",
+        "    self.out= out\n",
+        "    return out\n",
+        "\n",
+        "  def backward(self, dout):\n",
+        "    dx = dout * (1.0 -self.out) * self.out\n",
+        "    return dx"
+      ],
+      "metadata": {
+        "id": "ao7D_0mEwiv4"
+      },
+      "execution_count": 18,
       "outputs": []
     }
   ]
