Colab을 통해 생성됨

--- a/Chap05_View.ipynb
+++ b/Chap05_View.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNnMFo/dphacS7mzFU634M4",
+      "authorship_tag": "ABX9TyMM9tUvkJJG9yzL91vb2NnM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "Fhtc-b4vOL_-"
       },
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -114,9 +114,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVEG2Il6ONb9",
-        "outputId": "f01447fa-6123-45e7-a710-9720d4456991"
+        "outputId": "92baef64-4f69-428b-ba2f-89415cb5841c"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,13 +138,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DHEhs3ZlM3E7",
-        "outputId": "de2f02f8-e0e2-4f03-ff1e-a871ac170fa5"
+        "outputId": "472725a1-7af6-4d5b-9972-daa1582db691"
       },
       "outputs": [
         {
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "2AEkMMUKUgmy"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -293,12 +293,12 @@
       ],
       "metadata": {
         "id": "w0elDnUARQFq",
-        "outputId": "4f44dd7f-4cc1-486b-deb6-22dcd66caffb",
+        "outputId": "9099dfe6-39d5-4d7b-9b9f-49f97f49d6ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
       "metadata": {
         "id": "H8ftCPdiUxYU"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -352,23 +352,23 @@
       ],
       "metadata": {
         "id": "S2glSuGBwc7X",
-        "outputId": "260cc312-9f3b-43a5-9b42-27719a874a6b",
+        "outputId": "31b96dbf-ab83-4ad5-a54c-ddbd2dd38f2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[-72 151]\n",
-            " [143  25]]\n",
-            "[[  0 151]\n",
-            " [143  25]]\n",
-            "[[  0 151]\n",
-            " [143  25]]\n"
+            "[[ 232 -121]\n",
+            " [  66  111]]\n",
+            "[[232   0]\n",
+            " [ 66 111]]\n",
+            "[[232   0]\n",
+            " [ 66 111]]\n"
           ]
         }
       ]
@@ -413,7 +413,83 @@
       "metadata": {
         "id": "ao7D_0mEwiv4"
       },
-      "execution_count": 18,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Affine in Bias"
+      ],
+      "metadata": {
+        "id": "UsnHKtVNM-4a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_dot_W = np.array([[0,0,0],[10,10,10]])\n",
+        "B=np.array([1,2,3])\n",
+        "\n",
+        "print(x_dot_W +B)"
+      ],
+      "metadata": {
+        "id": "E24ErfgBM-kC",
+        "outputId": "b0c292f3-0377-4596-efb0-a96df62da9a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3]\n",
+            " [11 12 13]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dY = np.array([[1,2,3],[4,5,6]])\n",
+        "dB=np.sum(dY,axis=0)\n",
+        "AM=np.argmax(dY,axis=1)\n",
+        "print(dY)\n",
+        "print(dB)\n",
+        "print(AM)"
+      ],
+      "metadata": {
+        "id": "Dzs-PpV1NRrn",
+        "outputId": "fab1777a-eea8-497d-b640-783e3c8429d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "[5 7 9]\n",
+            "[2 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8okMKwFFNalQ"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
