Colab을 통해 생성됨

--- a/Chap05_View.ipynb
+++ b/Chap05_View.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMM9tUvkJJG9yzL91vb2NnM",
+      "authorship_tag": "ABX9TyN4yjMavbfPzOKF5+zU62E4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iVEG2Il6ONb9",
-        "outputId": "92baef64-4f69-428b-ba2f-89415cb5841c"
+        "outputId": "2e828822-df1a-41ce-8c4c-21b0a6f474f8"
       },
       "execution_count": 2,
       "outputs": [
@@ -144,7 +144,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DHEhs3ZlM3E7",
-        "outputId": "472725a1-7af6-4d5b-9972-daa1582db691"
+        "outputId": "c56accae-6bb1-44e9-e86e-59dc1470ebe3"
       },
       "outputs": [
         {
@@ -293,7 +293,7 @@
       ],
       "metadata": {
         "id": "w0elDnUARQFq",
-        "outputId": "9099dfe6-39d5-4d7b-9b9f-49f97f49d6ca",
+        "outputId": "e1429ca8-6060-4a99-b1aa-66f8106354f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -352,7 +352,7 @@
       ],
       "metadata": {
         "id": "S2glSuGBwc7X",
-        "outputId": "31b96dbf-ab83-4ad5-a54c-ddbd2dd38f2e",
+        "outputId": "9294d71e-9530-4ce9-8910-1f9f9a30fd1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -363,12 +363,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 232 -121]\n",
-            " [  66  111]]\n",
-            "[[232   0]\n",
-            " [ 66 111]]\n",
-            "[[232   0]\n",
-            " [ 66 111]]\n"
+            "[[ 50   8]\n",
+            " [-68  20]]\n",
+            "[[50  8]\n",
+            " [ 0 20]]\n",
+            "[[50  8]\n",
+            " [ 0 20]]\n"
           ]
         }
       ]
@@ -435,12 +435,12 @@
       ],
       "metadata": {
         "id": "E24ErfgBM-kC",
-        "outputId": "b0c292f3-0377-4596-efb0-a96df62da9a9",
+        "outputId": "bf4089d5-5d18-48a8-99ce-1fb4b862dbe5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,12 +464,12 @@
       ],
       "metadata": {
         "id": "Dzs-PpV1NRrn",
-        "outputId": "fab1777a-eea8-497d-b640-783e3c8429d7",
+        "outputId": "35398bb1-df67-4eab-bb54-6dafeca5de17",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,12 +484,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Affine"
+      ],
+      "metadata": {
+        "id": "8QYRr3zQf4UG"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Affine :\n",
+        "  def __init__(self, W,b):\n",
+        "    self.W = W\n",
+        "    self.b = b\n",
+        "    self.x = None\n",
+        "    self.dW = None\n",
+        "    self.db = None\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    self.x = x\n",
+        "    out = np.dot(x,self.W) + self.b\n",
+        "\n",
+        "    return out\n",
+        "  def backward(self, dout):\n",
+        "    dx = np.dot(dout, self.W.T)\n",
+        "    self.dW = np.dot(self.x.T, dout)\n",
+        "    self.db = np.sum(dout, axis=0)\n",
+        "\n",
+        "    return dx"
+      ],
       "metadata": {
         "id": "8okMKwFFNalQ"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     }
   ]
