Colab을 통해 생성됨

--- a/Chap05_View.ipynb
+++ b/Chap05_View.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPoW9zNhysta1sJmW4Gj38w",
+      "authorship_tag": "ABX9TyODZRUL29JOaUOc16DkK04p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "Fhtc-b4vOL_-"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "id": "iVEG2Il6ONb9",
         "outputId": "aeb2af94-ca59-4648-a31f-b3ad460c959d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "2AEkMMUKUgmy"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +298,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
       "metadata": {
         "id": "H8ftCPdiUxYU"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +413,7 @@
       "metadata": {
         "id": "ao7D_0mEwiv4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -440,7 +440,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "8okMKwFFNalQ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -545,12 +545,54 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "import numpy as np\n",
+        "\n",
+        "def softmax(x):\n",
+        "  if x.ndim==2:\n",
+        "    x = x-np.max(x, axis=1, keepdims=1)\n",
+        "    return np.exp(x) / np.sum(np.exp(x), axis=1, keepdims=1)\n",
+        "  x = x- np.max(x)\n",
+        "  return np.exp(x) / np.sum(np.exp(x))\n",
+        "\n",
+        "def CEE(y,t):\n",
+        "  if y.ndim ==1:\n",
+        "    y = y.rehsape(y.shape[0], -1)\n",
+        "    t = t.reshape(t.shape[0], -1)\n",
+        "  batch_size = y.shape[0]\n",
+        "  return -np.sum(np.log(y[np.arange(batch_size), t])) / batch_size\n",
+        "\n",
+        "### Batch용 CEE, SoftMax아님 주의! ###\n",
+        "\n",
+        "class softmaxWithloss:\n",
+        "  def __init__(self):\n",
+        "    self.loss = None\n",
+        "    self.y = None\n",
+        "    self.t = None\n",
+        "\n",
+        "  def forward(self, x, t):\n",
+        "    self.t = t\n",
+        "    self.y = softmax(x)\n",
+        "    self.loss = CEE(self.y, self.t)\n",
+        "\n",
+        "    return self.loss\n",
+        "  def backward(self, dout=1):\n",
+        "    batch_size = self.t.shape[0]\n",
+        "    dx = (self.y-self.t) / batch_size\n",
+        "    return dx"
       ],
       "metadata": {
         "id": "8HyYaqRX8Tqf"
       },
-      "execution_count": 11,
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KptViAXNBXhO"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
